fix overflow

--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,8 @@
 
 body {
     /*background: rgba(179,220,237,1);*/
-    /*background: linear-gradient(to right, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 50%, rgba(188,224,238,1) 100%);*/
-    background: url("../images/blank-notebook-pencil.jpg") no-repeat;
+    background: linear-gradient(to right, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 50%, rgba(188,224,238,1) 100%);
+    /*background: url("../images/blank-notebook-pencil.jpg") no-repeat;*/
     background-size: 100%;
     display:flex;
     justify-content: center;
